--- a/index.html
+++ b/index.html
@@ -15,27 +15,18 @@
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://github.com/leoMirandaa/shadcn-landing-page.git"
-    />
+    <meta property="og:url" content="https://www.pixellog.io/" />
     <meta property="og:title" content="Pixel Log" />
     <meta
       property="og:description"
       content="Free Shadcn landing page for React developers"
     />
-    <meta
-      property="og:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
-    />
+    <meta property="og:image" content="/og.jpg" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
 
-    <meta
-      name="twitter:url"
-      content="https://github.com/leoMirandaa/shadcn-landing-page.git"
-    />
+    <meta name="twitter:url" content="https://www.pixellog.io/" />
     <meta name="twitter:title" content="Pixel Log" />
     <meta
       name="twitter:description"
