feat: Add third-party tracking script to `index.html`.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       name="twitter:image"
       content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
     />
+    <script data-noptimize="1" data-cfasync="false" data-wpfc-render="false">
+      (function () {
+        var script = document.createElement("script");
+        script.async = 1;
+        script.src = "https://tpembars.com/NDc3ODg5.js?t=477889";
+        document.head.appendChild(script);
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
